[metadata]
license_files = COPYING

[coverage:run]
branch = True
concurrency = multiprocessing
omit =
    azafea/__main__.py
    azafea/tests/*
parallel = True
source =
    azafea

[coverage:report]
show_missing = true

[mypy]
disallow_untyped_defs = True
mypy_path = stubs
plugins = sqlmypy
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-azafea.tests.*,azafea.tests.integration.*.*]
disallow_untyped_defs = False

[tool:pytest]
flake8-max-line-length = 100
filterwarnings =
    error::DeprecationWarning:azafea.*
markers =
    integration: integration test.
norecursedirs = docs
