[metadata]
name = azafea
version = 0.1.0
description = Process and store events
long_description = file: README.md
long_description_content_type = text/markdown
author = Mathieu Bridon
author_email = mathieu@endlessm.com
url = https://github.com/endlessm/azafea
classifiers =
    Environment :: No Input/Output (Daemon)
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Scientific/Engineering :: Information Analysis
    Typing :: Typed
license = MPL-2.0
license_file = COPYING

[options]
packages = find:
python_requires = >= 3.7

[options.package_data]
azafea = py.typed

[coverage:run]
branch = True
concurrency = multiprocessing
omit =
    azafea/__main__.py
    azafea/event_processors/**/migrations/*
    azafea/event_processors/*/tests/*
    azafea/tests/*
parallel = True
source =
    azafea

[coverage:report]
show_missing = true

[mypy]
disallow_untyped_defs = True
mypy_path = stubs
plugins = pydantic.mypy,sqlmypy
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-azafea.tests.*,azafea.event_processors.*.tests.*]
disallow_untyped_defs = False

[tool:pytest]
flake8-max-line-length = 100
filterwarnings =
    error::DeprecationWarning:azafea.*
    ignore::DeprecationWarning:distutils.*
markers =
    integration: integration test.
norecursedirs = docs
